minor CSS styling

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
 
     <header>
-        <div class=mavbar>
+        <div class="navbar">
             <a href="#about-me"></a>
-            <a href="my-work"></a>
-            <a href="contact-me"></a>
+            <a href="#my-work"></a>
+            <a href="#contact-me"></a>
         </div>
     </header>
 
@@ -24,17 +24,17 @@
             <p>Web Developer</p>
         </div>
 
-        <div class="about-me">
+        <div id="about-me">
             <h2>About Me</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor aliquid assumenda, saepe impedit inventore obcaecati cupiditate voluptatum vero dolorem aliquam aut vel quaerat architecto eaque perspiciatis ipsa nesciunt repellendus. Voluptatum?</p>
         </div>
 
-        <div class="my-work">
+        <div id="my-work">
             <h2>My Work</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet praesentium expedita illo molestiae fugiat tempora sequi fuga vel repudiandae! Natus in voluptate at doloremque? Iste cupiditate eligendi esse iure porro?</p>
         </div>
 
-        <div class="contact-me">
+        <div id="contact-me">
             <h2>My Work</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae animi voluptates soluta hic delectus officia, commodi, autem laborum accusamus fugit, quas recusandae qui harum excepturi minus sapiente sequi rerum cupiditate?</p>
         </div>
