--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
     <header>
         <div class="navbar">
-            <a href="#about-me"></a>
-            <a href="#my-work"></a>
-            <a href="#contact-me"></a>
+            <a href="#about-me" class="nav-button">About Me</a>
+            <a href="#my-work" class="nav-button">My Work</a>
+            <a href="#contact-me" class="nav-button">Contact Me</a>
         </div>
     </header>
 
@@ -35,7 +35,7 @@
         </div>
 
         <div id="contact-me">
-            <h2>My Work</h2>
+            <h2>Contact Me</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae animi voluptates soluta hic delectus officia, commodi, autem laborum accusamus fugit, quas recusandae qui harum excepturi minus sapiente sequi rerum cupiditate?</p>
         </div>
 
