big struggle with navbar, correct layout now

--- a/index.html
+++ b/index.html
@@ -12,14 +12,20 @@
 <body>
 
     <header>
+        
+        <div class="page-title">
+            <h1>Benji Clewer</h1>
+            <p>Web Developer</p>
+        </div>
+        
         <div class="navbar">
-            <a href="#about-me" class="nav-button">About Me</a>
-            <a href="#my-work" class="nav-button">My Work</a>
-            <a href="#contact-me" class="nav-button">Contact Me</a>
+            <a href="#about" class="nav-button">About</a>
+            <a href="#work" class="nav-button">Work</a>
+            <a href="#contact" class="nav-button">Contact</a>
         </div>
     </header>
 
-        <div class="page title">
+        <div class="mission-statement">
             <h1>Benji Clewer</h1>
             <p>Web Developer</p>
         </div>
