--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
     </header>
 
         <div class="mission-statement">
-            <h1>Benji Clewer</h1>
-            <p>Web Developer</p>
+            <h1>My mission is your mission</h1>
+            <p>Helping turn your dreams into reality since 1995</p>
         </div>
 
         <div id="about-me">
             <h2>About Me</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor aliquid assumenda, saepe impedit inventore obcaecati cupiditate voluptatum vero dolorem aliquam aut vel quaerat architecto eaque perspiciatis ipsa nesciunt repellendus. Voluptatum?</p>
+            <p>Hi! My name is Ben and I am currently expanding my web development skills. </p>
         </div>
 
         <div id="my-work">
