--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <div id="about-me">
             <h2>About Me</h2>
             <p>Hi! My name is Ben and I am currently expanding my web development skills. </p>
+            <img scr="./assets/images/snow1.jpg" alt="hiking in the snow">
         </div>
 
         <div id="my-work">
