about me section

--- a/index.html
+++ b/index.html
@@ -26,14 +26,18 @@
     </header>
 
         <div class="mission-statement">
-            <h1>My mission is your mission</h1>
+            <h1>Your mission is my mission</h1>
             <p>Helping turn your dreams into reality since 1995</p>
         </div>
 
         <div id="about-me">
             <h2>About Me</h2>
-            <p>Hi! My name is Ben and I am currently expanding my web development skills. </p>
-            <img scr="./assets/images/snow1.jpg" alt="hiking in the snow">
+            <p>My name is Ben and I am currently expanding my web development skills. To give you some background
+                about myself, I am 26 years old and currently live in Adelaide. I am a qualified Podiatrist, 
+                and have been working as such for the last 4 years. <br><br> I love a challenge, and learning new things. 
+                Outside of work my favourite hobbies are fishing, camping, hiking, travelling, running and drinking coffee!
+                <br><br>I currently work in the country during the week, and spend weekends back in Adelaide. </p>
+            <img src="./assets/images/headshot1.jpg" alt="profile picture"/>
         </div>
 
         <div id="my-work">
