--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </p>
                 <p>
                     <label for="phone-number">Phone number:</label>
-                    <input class="text-input" id="phone-number" type="text" placeholder="phone number" />
+                    <input class="text-input" id="phone-number" type="text" placeholder="Phone number" />
                   </p>
                 <p>
                   <label for="query">Query:</label>
@@ -112,7 +112,7 @@
 
     <footer>
         <div>
-            That's all folks
+            <p>That's all folks</p>
         </div>
     </footer>
     
