nav links move to relevent section in webpage

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         </div>
         
         <div class="navbar">
-            <a href="#about" class="nav-button">About</a>
-            <a href="#work" class="nav-button">Work</a>
-            <a href="#contact" class="nav-button">Contact</a>
+            <a href="#about-me" class="nav-button">About</a>
+            <a href="#my-work" class="nav-button">Work</a>
+            <a href="#contact-me" class="nav-button">Contact</a>
         </div>
     </header>
 
