media query responsive screen, commenting

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
             <div class="my-work-card">
                 <h3>Project 1</h3>
                 <p></p>
-                <img src="./assets/images/placeholder.png" alt="place-holder"/>
+                <a href="https://www.google.com/" target="_blank" rel="noopener noreferrer"><img src="./assets/images/placeholder.png" alt="place-holder"/></a>
+                <!-- when img is clicked on website, link will open google to a new tab, no projects currently linked -->
             </div>
 
             <div class="my-work-card">
