fixing bugs with CSS, adding media agency homework to HTML

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <p>To give you some background about myself, I am 26 years old and currently live in Adelaide. I am a qualified Podiatrist, 
                 and have been working as such for the last 4 years. <br><br> I love a challenge, and learning new things. 
                 Outside of work my favourite hobbies are fishing, camping, hiking, travelling, running and drinking coffee!
-                <br><br>I currently work in the country during the week, and spend weekends back in Adelaide. </p>
+                <br><br>Until starting this course, I had never done any coding before. So far I am finding it challenging, but very rewarding. </p>
             <img src="./assets/images/headshot1.jpg" alt="profile picture"/>
         </div>
 
@@ -46,10 +46,10 @@
         <section class="my-work">
             
             <div class="my-work-card">
-                <h3>Project 1</h3>
-                <p></p>
-                <a href="https://www.google.com/" target="_blank" rel="noopener noreferrer"><img src="./assets/images/placeholder.png" alt="place-holder"/></a>
-                <!-- when img is clicked on website, link will open google to a new tab, no projects currently linked -->
+                <h3>Horiseon: Marketing Agency</h3>
+                <p>In this project I was assigned to fix bugs within the website's HTML and CSS.</p>
+                <a href="https://b3nj1e.github.io/01-Homework-Marketing-Agency/" target="_blank" rel="noopener noreferrer"><img src="./assets/images/marketing-agency.png" alt="place-holder"/></a>
+                <!-- when img is clicked on website, link will open the marketing agency website to a new tab, no projects currently linked -->
             </div>
 
             <div class="my-work-card">
