--- a/index.html
+++ b/index.html
@@ -47,20 +47,20 @@
             
             <div class="my-work-card">
                 <h3>Marvelous Memes</h3>
-                <p>A dynamically populating interactive website using server side APIs, developed in collaboration with other web developers. All HTML, CSS and Javascript code was written by the authors, using the Marvel API and Giphy API to dynamically populate cards.</p>
+                <p>A dynamically populating interactive website using server side APIs, developed in collaboration with other web developers. All HTML, CSS and Javascript code was written by the authors, using the Marvel API and Giphy API to dynamically populate cards. Click <a href="https://github.com/B3nj1e/Collaborative-Project" target="_blank">here</a> for GitHub repo, click image for deployed website.</p>
                 <a href="https://marcmalliate.github.io/Collaborative-Project/" target="_blank" rel="noopener noreferrer"><img src="./assets/images/Picture3.png" alt="place-holder"/></a>
                 <!-- when img is clicked on website, link will open the marketing agency website to a new tab, no projects currently linked -->
             </div>
 
             <div class="my-work-card">
                 <h3>Weather Dashboard</h3>
-                <p>A dynamically populating website using a weather API to obtain data. Presenting current weather, and 5 day forecast for searched city. Searched cities are saved in the left column, and when clicked upon the weather data is represented.</p>
+                <p>A dynamically populating website using a weather API to obtain data. Presenting current weather, and 5 day forecast for searched city. Searched cities are saved in the left column, and when clicked upon the weather data is represented. Click <a href="https://github.com/B3nj1e/06-Weather-Dashboard" target="_blank">here</a> for GitHub repo, click image for deployed website.</p>
                 <a href="https://b3nj1e.github.io/06-Weather-Dashboard/" target="_blank" rel="noopener noreferrer"><img src="./assets/images/Picture1.png" alt="place-holder"/></a>
             </div>
 
             <div class="my-work-card">
                 <h3>Coding Quiz</h3>
-                <p>A dynamically populating interactive quiz website. Upon starting the quiz, a timer begins counting down from 30 seconds. For each correct answer a +1 tally is recorded and for each incorrect answer 10 seconds is taken off the timer. Upon completing the quiz the final score is presented and an option to save your score and initials to the high scores page. Buttons to the high score page and to restart the quiz at the end.</p>
+                <p>A dynamically populating interactive quiz website. Upon starting the quiz, a timer begins counting down from 30 seconds. For each correct answer a +1 tally is recorded and for each incorrect answer 10 seconds is taken off the timer. Upon completing the quiz the final score is presented and an option to save your score and initials to the high scores page. Buttons to the high score page and to restart the quiz at the end. Click <a href="https://github.com/B3nj1e/04-Homework-Quiz-Game" target="_blank">here</a> for GitHub repo, click image for deployed website.</p>
                 <a href="https://b3nj1e.github.io/04-Homework-Quiz-Game/" target="_blank" rel="noopener noreferrer"><img src="./assets/images/Picture2.png" alt="place-holder"/></a>
             </div>
 
@@ -72,7 +72,7 @@
 
             <div class="my-work-card">
                 <h3>Horiseon: Marketing Agency</h3>
-                <p>In this project I was assigned to fix bugs within the website's HTML and CSS.</p>
+                <p>In this project I was assigned to fix bugs within the website's HTML and CSS. Click <a href="https://github.com/B3nj1e/01-Homework-Marketing-Agency" target="_blank">here</a> for GitHub repo, click image for deployed website.</p>
                 <a href="https://b3nj1e.github.io/01-Homework-Marketing-Agency/" target="_blank" rel="noopener noreferrer"><img src="./assets/images/marketing-agency.png" alt="place-holder"/></a>
                 <!-- when img is clicked on website, link will open the marketing agency website to a new tab, no projects currently linked -->
             </div>
