adding work day scheduler card

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
             </div>
 
             <div class="my-work-card">
-                <h3>Project 4</h3>
-                <p></p>
-                <img src="./assets/images/placeholder.png" alt="place-holder"/>
+                <h3>Work Day Scheduler</h3>
+                <p>A scheduling app, based on a 9-5 work day broken down into hourly units. The current date and time is displayed in the title. Color coded rows are used for past(grey), present(red) and future(green) hourly units. In each row there are columns named time, task and save button. The text that is entered into the task input and then saved, is commited to local storage and hence persists with refreshing and opening of the app at a later date. Click <a href="https://github.com/B3nj1e/05-Work-Day-Scheduler" target="_blank">here</a> for GitHub repo, click image for deployed website.</p>
+                <a href="https://b3nj1e.github.io/05-Work-Day-Scheduler/" target="_blank" rel="noopener noreferrer"><img src="./assets/images/Picture4.png" alt="place-holder"/></a>
             </div>
 
             <div class="my-work-card">
