updating about me section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <p>To give you some background about myself, I am 26 years old and currently live in Adelaide. I am a qualified Podiatrist, 
                 and have been working as such for the last 4 years. <br><br> I love a challenge, and learning new things. 
                 Outside of work my favourite hobbies are fishing, camping, hiking, travelling, running and drinking coffee!
-                <br><br>Until starting this course, I had never done any coding before. So far I am finding it challenging, but very rewarding. </p>
+                <br><br>I am currently completing the University of Adelaide Full Stack Coding Program. So far I am finding it challenging, but very rewarding. </p>
             <img src="./assets/images/headshot1.jpg" alt="profile picture"/>
         </div>
 
