--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
                 <h3>Marvelous Memes</h3>
                 <p>A dynamically populating interactive website using server side APIs, developed in collaboration with other web developers. All HTML, CSS and Javascript code was written by the authors, using the Marvel API and Giphy API to dynamically populate cards. Click <a href="https://github.com/B3nj1e/Collaborative-Project" target="_blank">here</a> for GitHub repo, click image for deployed website.</p>
                 <a href="https://marcmalliate.github.io/Collaborative-Project/" target="_blank" rel="noopener noreferrer"><img src="./assets/images/Picture3.png" alt="place-holder"/></a>
-                <!-- when img is clicked on website, link will open the marketing agency website to a new tab, no projects currently linked -->
             </div>
 
             <div class="my-work-card">
@@ -71,10 +70,9 @@
             </div>
 
             <div class="my-work-card">
-                <h3>Horiseon: Marketing Agency</h3>
-                <p>In this project I was assigned to fix bugs within the website's HTML and CSS. Click <a href="https://github.com/B3nj1e/01-Homework-Marketing-Agency" target="_blank">here</a> for GitHub repo, click image for deployed website.</p>
-                <a href="https://b3nj1e.github.io/01-Homework-Marketing-Agency/" target="_blank" rel="noopener noreferrer"><img src="./assets/images/marketing-agency.png" alt="place-holder"/></a>
-                <!-- when img is clicked on website, link will open the marketing agency website to a new tab, no projects currently linked -->
+                <h3>Event Planner Application</h3>
+                <p>In this project I worked collaboratively with 3 other developers, to create a full stack application using HTML, CSS, Javascript, SQL, MySQL, Node.js, express and various libraries. This application lets a user create and view events. Events have a location and event category. To access and create events, you must be logged in. Click <a href="https://github.com/caz1502/EventPlanner-Project2" target="_blank">here</a> for GitHub repo, click image for deployed website.</p>
+                <a href="https://wheres-the-party-at.herokuapp.com/calendar/" target="_blank" rel="noopener noreferrer"><img src="./assets/images/Picture123.png" alt="place-holder"/></a>
             </div>
         
         </section>
